--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,12 +23,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/title"
-        android:backgroundTint="@color/white"
+        android:layout_marginHorizontal="30dp"
         android:layout_marginTop="40dp"
-        android:textColor="@color/white"
+        android:backgroundTint="@color/white"
         android:hint="@string/text_hint_city"
-        android:textColorHint="@color/light"
-        android:layout_marginHorizontal="30dp" />
+        android:minHeight="48dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/light" />
 
     <Button
         android:id="@+id/btn_weather"
